Changes and updates - Fixing runtime errors